# fivefury

./: .gitignore  CHANGELOG.md  CUT_FORMAT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: README.md  animation.md  api-style.md  audio.md  bounds.md  cutscenes.md  drawables.md  format-support.md  gamefilecache.md  maps-dlc-rpf.md  metadata.md  navigation.md  ped-expressions.md
examples/: check_state.py  generate_samples.py  minimal_usage.py
fivefury/: __init__.py  _native.py  binary.py  buckets.py  cache.py  cache_assets.py  cache_scan.py  cache_views.py  colors.py  common.py  crypto.py  crypto_keys.py  extensions.py  extensions_defs.py  game_target.py  gamefile.py  gtxd.py  gxt2.py  hashing.py  meta.py  meta_builder.py  meta_defs.py  meta_read.py  metahash.py  rbf.py  resolver.py  resource.py  resource_textures.py  rpf.py  rpf_convert.py  rpf_entries.py  rpf_utils.py  texture.py  vector.py  xml.py  ymap.py  ymap_defs.py  ymap_surfaces.py  ytd.py  ytd_defs.py  (+2 more)
fivefury/assets/: __init__.py  base.py  ydr.py  yft.py
fivefury/awc/: __init__.py  audio.py  constants.py  conversion.py  crypto.py  io.py  structures.py
fivefury/bounds/: __init__.py  geometry.py  materials.py  model.py  reader.py  writer.py
fivefury/cache/: __init__.py  assets.py  core.py  io.py  (+4 more)
native/: bounds_algorithms.cpp  bounds_algorithms.h  bounds_python.cpp  bounds_python.h  bounds_types.h  crypto_magic.cpp  crypto_magic.h  fivefury_native.cpp  py_bindings.cpp  py_bindings.h  py_bounds.cpp  py_crypto.cpp  py_index.cpp  py_module.cpp  py_resource.cpp  py_rpf.cpp  py_vertex.cpp  resource_layout.cpp  resource_layout.h  rpf_archive.cpp  rpf_archive.h  rpf_crypto.cpp  rpf_index.cpp  rpf_index.h  rpf_read.cpp  rpf_scan.cpp  rpf_scan.h
tests/: bench_perf.py  compat.py  helpers.py  test_cdr.py  test_cut.py  test_cut_dsl.py  test_cut_no_template.py  test_dlc.py  test_drawable.py  test_gtxd.py  test_hashing.py  test_meta_rpf_contracts.py  test_rpf_ps3.py  test_rpf_streaming_folder.py  test_ybn.py  test_ycd.py  test_ycd_cutscene_builder.py  test_ydd.py  test_ydr.py  test_ydr_builder.py  test_ydr_shaders.py  test_yft.py  test_ymf.py  test_ynd.py  test_ynv.py  test_ynv_assimp.py  test_ytyp_flags.py
(+225 files in other folders)
