[build-system]
requires = ["setuptools>=68", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "fivefury"
version = "0.1.0"
description = "Partial Python port of CodeWalker.GameFiles for YMAP, YTYP and RPF workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" },
]
license = "MIT"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fivefury*"]

[tool.setuptools.package-data]
fivefury = ["data/*.dat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
