[build-system]
requires = ["setuptools>=68", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "fivefury"
version = "0.2.2"
description = "Python library for GTA V asset workflows including YMAP, YTYP, RPF, YTD and GameFileCache utilities."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" },
]
license = "MIT"
dependencies = ["miniaudio>=1.71"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fivefury*"]

[tool.setuptools.package-data]
fivefury = ["data/*.dat", "ydr/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
